<resources>
    <string name="app_name">Tamamochi</string>
    <string name="issueTempTooLow">The ambient temperature is too low.</string>
    <string name="resolutionTempTooLow">Please turn the heater on or find a warmer place to stay.</string>
    <string name="issueTempTooHigh">The ambient temperature is too high.</string>
    <string name="resolutionTempTooHigh">Please open the window, turn the heater off or find a colder place to stay.</string>
    <string name="issueHumidityTooHigh">The humidity is too high.</string>
    <string name="resolutionHumidityTooHigh">Please use a dehumidifier or find a dryer place to stay.</string>
    <string name="issueHumidityTooLow">The humidity is too low.</string>
    <string name="resolutionHumidityTooLow">Please use a humidifier or find a wetter place to stay.</string>
    <string name="issueAirPressureTooLow">The pressure of the air is too low.</string>
    <string name="resolutionAirPressureTooLow">Please don\'t stay in a high spot for too long.</string>
    <string name="issueAirPressureTooHigh">The pressure of the air is too high.</string>
    <string name="resolutionAirPressureTooHigh">Please find a lower spot to stay.</string>
    <string name="issueCo2TooHigh">The amount of CO2 in the air is too high.</string>
    <string name="resolutionCo2TooHigh">Please open a window or find a spot with fresher air.</string>
    <string name="issueLightTooBright">The light is too bright.</string>
    <string name="resolutionLightTooBright">Dim the lights or find a darker spot to stay.</string>
    <string name="txtNotifAssistanceNeededTitle">Your Tamamochi needs your assistance</string>
    <string name="txtNotifAssistanceNeededText">Open the application to check your Tamamochi\'s status</string>
    <string name="txtAppRunningInBackground">The application is running in background</string>
    <string name="altUserIcon">User Icon</string>
    <string name="txtPlay">Play</string>
    <string name="txtLoginRegister">Sign In / Sign Up</string>
    <string name="welcomeMessage">Welcome</string>
    <string name="txtCharacterSelect">Select your character</string>
    <string name="txtCharacterType">Character Type</string>
    <string name="txtCharacterName">Character Name:</string>
    <string name="txtCreateCharacter">Create</string>
    <string name="txtCharacterOk">Your character is in perfect condition!</string>
    <string name="default_name">Character Name</string>
    <string name="default_age">0 Days</string>
    <string name="txtDays">Days</string>
    <string name="statusPageSeparator">of</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">"Humidity: "</string>
    <string name="light">"Light: "</string>
    <string name="co2">"CO2: "</string>
    <string name="txtCharacterDead">Your Tamamochi died...</string>
    <string name="txtClickToRestart">Click here to create a new character.</string>
    <string name="txtOverwriteCharacterAlertDialogTitle">Create new character</string>
    <string name="txtOverwriteCharacterAlertDialogQuestion">Creating a new character might overwerite the current one. ¿Are you sure you want to do it?</string>
    <string name="txtOverwriteCharacterAlertDialogAffirmative">Yes</string>
    <string name="txtOverwriteCharacterAlertDialogNegative">No</string>
    <string name="txtCreate">Create character</string>
    <string name="txtCharacterList">Your Characters</string>
    <string name="txtCharacterListBtn">Character List</string>
</resources>