<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuConstraintView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/menu_background">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:fontFamily="@font/bakso_sapi"
        android:textColor="@color/title"
        android:textSize="30dp">
    </TextView>
    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/playButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/txtPlay"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/white"
            android:backgroundTint="@color/title" />
        <Button
            android:id="@+id/createButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/txtCreate"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/white"
            android:backgroundTint="@color/title" />
        <Button
            android:id="@+id/characterListButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/txtCharacterListBtn"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/white"
            android:backgroundTint="@color/title" />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/txtLoginRegister"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/white"
            android:backgroundTint="@color/title" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>