<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background">
    <TextView
        android:id="@+id/txtCharacterSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:text="@string/txtCharacterSelect"
        android:fontFamily="@font/bakso_sapi"
        android:textColor="@color/title"/>
    <LinearLayout
        android:id="@+id/characterSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        app:layout_constraintTop_toBottomOf="@id/txtCharacterSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/selectPrevButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:drawableBottom="@drawable/ic_baseline_arrow_back_ios_24" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivCharacter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />
            <TextView
                android:id="@+id/tvCharacter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/txtCharacterType"
                android:fontFamily="@font/bakso_sapi"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>
        <Button
            android:id="@+id/selectNextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            style="?android:attr/borderlessButtonStyle"
            android:drawableBottom="@drawable/ic_baseline_arrow_forward_ios_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/characterSelectionLayout"
        android:layout_margin="30dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtCharacterName"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:textSize="12sp"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/etCharacter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/white"/>
    </LinearLayout>
    <Button
        android:id="@+id/createButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/txtCreateCharacter"
        android:fontFamily="@font/bakso_sapi"
        android:textColor="@color/white"
        android:backgroundTint="@color/title" />

</androidx.constraintlayout.widget.ConstraintLayout>