<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_game_background_basic">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:textSize="25sp"
            android:text="@string/default_name"/>
        <TextView
            android:id="@+id/tvCharacterAge"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:text="@string/default_age"/>
        <TextView
            android:id="@+id/tvHealthPoints"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:background="@drawable/background_round"
        android:backgroundTint="@color/title_light">
        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_round"
            android:backgroundTint="@color/white" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textSize="11sp"
                android:fontFamily="@font/bakso_sapi"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textSize="11sp"
                android:fontFamily="@font/bakso_sapi"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/tvLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textSize="11sp"
                android:fontFamily="@font/bakso_sapi"
                android:textColor="@color/title"/>
            <TextView
                android:id="@+id/tvCo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textSize="11sp"
                android:fontFamily="@font/bakso_sapi"
                android:textColor="@color/title"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/character"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="150dp" />
    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/background_round"
        android:backgroundTint="@color/title_light"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:text="@string/txtCharacterOk">
        </TextView>
        <TextView
            android:id="@+id/tvResolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:textSize="11sp" >
        </TextView>
        <TextView
            android:id="@+id/tvStatusPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bakso_sapi"
            android:textColor="@color/title"
            android:textSize="11sp" >
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>